results/SVCOMP/specgen/log-radians-2024_02_29_08_56_48.txt
public class Radians {
    //@ ensures \result == true <==> java.lang.Math.toRadians(deg) >= 0;
    //@ ensures \result == false <==> java.lang.Math.toRadians(deg) < 0;
    public static boolean f(double deg) {
        double rad = java.lang.Math.toRadians(deg);
        if (rad >= 0) {
            return true;
        } else {
            return false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/radians.java:1: error: class Radians is public, should be declared in a file named Radians.java
public class Radians {
       ^
1 error

public class radians {
    //@ ensures \result == true <==> java.lang.Math.toRadians(deg) >= 0;
    //@ ensures \result == false <==> java.lang.Math.toRadians(deg) < 0;
    public static boolean f(double deg) {
        double rad = java.lang.Math.toRadians(deg);
        if (rad >= 0) {
            return true;
        } else {
            return false;
        }
    }
}

